Modificaciones para terminar de incluir la ultima funcion, ya sea en modo elitista o normal, con graficas y logs extra